# sticky-paws

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  compile_commands.json  makefile
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
docs/: ARCHITECTURE.md  CODE_QUALITY_SUMMARY.md  memory-leak.md  todos.md
src/: CMakeLists.txt  Info.plist  Makefile  bear.c  bear.h  game.c  game.h  main.c  main.h  sound.c  sound.h  ui.c  ui.h  utils.c  utils.h
src/assets/: sticky-paws.icns
